prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gitops-demo
  namespace: prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gitops-demo

  template:
    metadata:
      labels:
        app: gitops-demo

    spec:
      imagePullSecrets:
      - name: ghcr-secret

      containers:
      - name: app

        image: ghcr.io/abhinav211/gitops-demo:9301cd71f16a4bb562068737a5889b9fc3c2a39c

        ports:
        - containerPort: 8080

  strategy:
    canary:
      stableService: gitops-demo-stable
      canaryService: gitops-demo-canary

      trafficRouting:
        traefik:
          weightedTraefikServiceName: gitops-demo-weighted   # ✅ Required field!

      steps:
      - setWeight: 20
      - pause: {}

      - setWeight: 50
      - pause: {}

      - setWeight: 100
