prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo-preview
  namespace: prod

spec:
  selector:
    app: gitops-demo

  ports:
  - port: 80
    targetPort: 8080
