prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo
  namespace: prod
spec:
  selector:
    app: gitops-demo

  ports:
  - port: 80
    targetPort: 8080
