prod/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitops-demo
  namespace: prod

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`gitops.local`)
      kind: Rule

      services:
        - kind: TraefikService
          name: gitops-demo-weighted
